Closed
Bug 1296749
Opened 9 years ago
Closed 9 years ago
Fix DirectX shutdown order
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
mozilla51
People
(Reporter: dvander, Assigned: dvander)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
3.27 KB,
patch
|
mattwoodrow
:
review+
ritu
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
I'm still not sure exactly how I got this to manifest, or why it doesn't manifest normally, but the way we shutdown DirectX is backwards, and was crashing with the GPU process enabled.
Currently it's:
* Release D3D11
* Release D2D
* Release reference draw target
It should be:
* Release reference draw target
* Release D2D
* Release D3D11
![]() |
Assignee | |
Comment 1•9 years ago
|
||
Attachment #8783063 -
Flags: review?(matt.woodrow)
Updated•9 years ago
|
Attachment #8783063 -
Flags: review?(matt.woodrow) → review+
Pushed by danderson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/7e25ef116964
Fix DirectX shutdown ordering issues. (bug 1296749, r=mattwoodrow)
Comment 3•9 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox51:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Comment on attachment 8783063 [details] [diff] [review]
patch
Approval Request Comment
This should have a positive impact on reducing crashes in (at least a percentage of) bug 1292311 and bug 1285333. The patch has been on 51 since August, so the risk of regressions is very low.
Attachment #8783063 -
Flags: approval-mozilla-beta?
status-firefox50:
--- → affected
Comment on attachment 8783063 [details] [diff] [review]
patch
Fix has been on Nightly for a few weeks, should help improve stability, Beta50+
Attachment #8783063 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 6•9 years ago
|
||
bugherder uplift |
Comment 7•9 years ago
|
||
From the bugs mentioned as affected, sounds like 49 is also affected here too. If this fixes the crash in bug 1292311 we could consider it for 49.
Andrei, could your team help verify the crash fix on beta 50 once we have more data?
Comment 8•9 years ago
|
||
I tried to reproduce the crashes mentioned by Milan, in bug 1292311 and bug 1285333 with 49 on Windows 7 x86, but unfortunately, I didn't managed.
David, is there a way I can manually verify this fixes? I am missing something?
![]() |
Assignee | |
Comment 9•9 years ago
|
||
When I reproduced this crash, it was on a separate branch and I might have had the debug DirectX SDK installed. So I'm guessing it's not that easy to reproduce.
Comment 10•9 years ago
|
||
Thank you, David for your reply. I will remove Andrei's ni? since this issue is a bit complicated for manual verification.
Flags: needinfo?(andrei.vaida)
Comment 11•9 years ago
|
||
At this point I think we should stick with waiting for this fix to come along in 50. Wontfix for 49.
You need to log in
before you can comment on or make changes to this bug.
Description
•