Bug 1296749 - Fix DirectX shutdown ordering issues. r=mattwoodrow, a=ritu